# libutils

./: .buildinfo  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
.github/workflows/: build_cmake.yml  github_page.yml  linux.yml
_sources/pages/: page_algorithm.rst.txt  page_files.rst.txt  page_iterator.rst.txt  page_tuple.rst.txt
docs/: CMakeLists.txt  Doxyfile.in  conf.py  ext_algorithm.rst  ext_iterator.rst  index.rst  other_algorithm.rst  requirements.txt  script.py
docs/_build/html/: .buildinfo  ext_algorithm.html  ext_iterator.html  genindex.html  index.html  objects.inv  other_algorithm.html  search.html  searchindex.js
docs/source/: Doxyfile.in.bak  conf.py  index.rst
docs/source/pages/: ext_algorithm.rst  ext_iterator.rst  ext_numeric.rst  other_algorithm.rst  page_algorithm.rst  page_iterator.rst  page_numeric.rst  page_type_traits.rst  page_utility.rst
include/libutils/: algorithm.hpp  files.hpp  headers.hpp  iterator.hpp  numeric.hpp  tuple.hpp  type_traits.hpp  utilities.hpp  utility.hpp
libutils/: utilities.hpp  utilities.test.cpp
pages/: page_algorithm.html  page_files.html  page_iterator.html  page_numeric.html  page_tuple.html  page_type_traits.html  page_utility.html
scripts/: build_release.sh  run_tests.sh
tests/: CMakeLists.txt  paths.test.files.hpp  test.algorithm.cpp  test.files.cpp  test.iterator.cpp  test.numeric.cpp  test.tuple.cpp  test.type_traits.cpp  test.utilities.cpp  test.utility.cpp
tests/priv/: paths.test.files.hpp.in
